--- a/PerfSimulationApp/MainWindow.xaml
+++ b/PerfSimulationApp/MainWindow.xaml
@@ -6,35 +6,40 @@
         xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
         xmlns:local="clr-namespace:PerfSimulationApp"
         mc:Ignorable="d"
-        Title="MainWindow" Height="800" Width="1600">
-    <Grid>
-        <Button x:Name="StartButton" Content="Start" HorizontalAlignment="Left" Margin="941,37,0,0" VerticalAlignment="Top" Width="116" Height="42" Click="StartButton_Click"/>
-        <TextBox x:Name="HubConnectionStringBox" HorizontalAlignment="Left" Height="42" Margin="62,37,0,0" TextWrapping="Wrap" Text="Hub Connection String" VerticalAlignment="Top" Width="830" PreviewTextInput="HubConnectionStringBox_PreviewTextInput"/>
-        <Grid HorizontalAlignment="Left" Height="270" Margin="27,149,0,0" VerticalAlignment="Top" Width="1539">
-            <lvc:CartesianChart Series="{Binding ThroughputCollection}" LegendLocation="Right" >
-                <lvc:CartesianChart.AxisY>
-                    <lvc:Axis Title="Throughput" LabelFormatter="{Binding YFormatter}"></lvc:Axis>
-                </lvc:CartesianChart.AxisY>
-                <lvc:CartesianChart.AxisX>
-                    <lvc:Axis Title="Time" Labels="{Binding Labels}"></lvc:Axis>
-                </lvc:CartesianChart.AxisX>
-            </lvc:CartesianChart>
+        Title="MainWindow" Height="850" Width="1600">
+    <Viewbox Stretch="Uniform">
+        <Grid Height="809">
+            <Button x:Name="StartButton" Content="Start" HorizontalAlignment="Left" Margin="1085,76,0,0" VerticalAlignment="Top" Width="116" Height="42" Click="StartButton_Click"/>
+            <TextBox x:Name="HubConnectionStringBox" HorizontalAlignment="Left" Height="42" Margin="32,76,0,0" TextWrapping="Wrap" Text="" VerticalAlignment="Top" Width="770" PreviewTextInput="HubConnectionStringBox_PreviewTextInput"/>
+            <Grid HorizontalAlignment="Left" Height="270" Margin="27,149,0,0" VerticalAlignment="Top" Width="1539">
+                <lvc:CartesianChart Series="{Binding ThroughputCollection}" LegendLocation="Right" Margin="-10,10,10,-27" >
+                    <lvc:CartesianChart.AxisY>
+                        <lvc:Axis Title="Throughput" LabelFormatter="{Binding YFormatter}"></lvc:Axis>
+                    </lvc:CartesianChart.AxisY>
+                    <lvc:CartesianChart.AxisX>
+                        <lvc:Axis Title="Time" LabelFormatter="{Binding XFormatter}"></lvc:Axis>
+                    </lvc:CartesianChart.AxisX>
+                </lvc:CartesianChart>
+            </Grid>
+            <Button x:Name="StopButton" Content="Stop" HorizontalAlignment="Left" Margin="1227,76,0,0" VerticalAlignment="Top" Width="116" Height="42" Click="StopButton_Click"/>
+            <Grid HorizontalAlignment="Left" Height="270" Margin="27,444,0,0" VerticalAlignment="Top" Width="1539">
+                <lvc:CartesianChart Series="{Binding LatencyCollection}" LegendLocation="Right" Margin="-11,10,11,-50" >
+                    <lvc:CartesianChart.AxisY>
+                        <lvc:Axis Title="AverageLatency" LabelFormatter="{Binding YFormatter}"/>
+                    </lvc:CartesianChart.AxisY>
+                    <lvc:CartesianChart.AxisX>
+                        <lvc:Axis Title="Time" LabelFormatter="{Binding XFormatter}"/>
+                    </lvc:CartesianChart.AxisX>
+                </lvc:CartesianChart>
+            </Grid>
+            <TextBox x:Name="DeviceCountBox" HorizontalAlignment="Left" Height="42" Margin="834,76,0,0" TextWrapping="Wrap" Text="1" VerticalAlignment="Top" Width="81" PreviewTextInput="DeviceCountBox_PreviewTextInput" FontSize="14"/>
+            <Label Content="Hub Connection String" HorizontalAlignment="Left" Margin="32,40,0,0" VerticalAlignment="Top" FontSize="16" FontWeight="Bold"/>
+            <Label Content="# Devices" HorizontalAlignment="Left" Margin="834,40,0,0" VerticalAlignment="Top" FontSize="16" FontWeight="Bold"/>
+            <Border BorderBrush="Black" BorderThickness="1" HorizontalAlignment="Left" Height="79" Margin="1377,38,0,0" VerticalAlignment="Top" Width="152">
+                <TextBlock x:Name="DeviceCountLabel" Text="{Binding DeviceCount, Mode=TwoWay, UpdateSourceTrigger=PropertyChanged}" HorizontalAlignment="Left" Margin="-1" VerticalAlignment="Top" Height="79" Width="152" FontSize="48" Foreground="Black"/>
+            </Border>
+            <TextBox x:Name="TimeSpanBox" HorizontalAlignment="Left" Height="42" Margin="954,76,0,0" TextWrapping="Wrap" Text="" VerticalAlignment="Top" Width="97" FontSize="14"/>
+            <Label Content="TimeSpan" HorizontalAlignment="Left" Margin="954,40,0,0" VerticalAlignment="Top" FontSize="16" FontWeight="Bold"/>
         </Grid>
-        <Button x:Name="StopButton" Content="Stop" HorizontalAlignment="Left" Margin="1075,37,0,0" VerticalAlignment="Top" Width="116" Height="42" Click="StopButton_Click"/>
-        <Grid HorizontalAlignment="Left" Height="270" Margin="27,444,0,0" VerticalAlignment="Top" Width="1539">
-            <lvc:CartesianChart Series="{Binding LatencyCollection}" LegendLocation="Right" >
-                <lvc:CartesianChart.AxisY>
-                    <lvc:Axis Title="AverageLatency" LabelFormatter="{Binding YFormatter}"/>
-                </lvc:CartesianChart.AxisY>
-                <lvc:CartesianChart.AxisX>
-                    <lvc:Axis Title="Time" Labels="{Binding Labels}"/>
-                </lvc:CartesianChart.AxisX>
-            </lvc:CartesianChart>
-        </Grid>
-        <Grid HorizontalAlignment="Left" Height="749" Margin="10,10,0,0" VerticalAlignment="Top" Width="1572">
-            <TextBlock x:Name="DeviceCountLabel" Text="{Binding DeviceCount, Mode=TwoWay, UpdateSourceTrigger=PropertyChanged}" HorizontalAlignment="Left" Margin="1404,10,0,0" VerticalAlignment="Top" Height="79" Width="139" FontSize="48"/>
-        </Grid>
-        <TextBox x:Name="DeviceCountBox" HorizontalAlignment="Left" Height="42" Margin="1226,37,0,0" TextWrapping="Wrap" Text="1" VerticalAlignment="Top" Width="120" PreviewTextInput="DeviceCountBox_PreviewTextInput"/>
-
-    </Grid>
+    </Viewbox>
 </Window>
